tests/ParseSpec/valid/expr/op-seq.algst
let x = 1 + 2 |> \(n:Int) -> n in
x |> [Int, Int] negate |> [Int] [Int] negate
