tests/ParseSpec/invalid/decl/double-bind-function.algst
add : Int -> Int -> Int
add x x = x + x
